--- a/create_obj.ipynb
+++ b/create_obj.ipynb
@@ -32,12 +32,16 @@
      "collapsed": false,
      "input": [
       "# os.chdir('/Users/Carlos/Documents/HERMES/reductions/rhoTuc_long/combined/')\n",
-      "os.chdir('/Users/Carlos/Documents/HERMES/reductions/HD285507_single_arc_5.76/combined/')"
+      "# os.chdir('/Users/Carlos/Documents/HERMES/reductions/HD1581_6.0/combined/')\n",
+      "# os.chdir('/Users/Carlos/Documents/HERMES/reductions/HD1581_6.0/single_exposures/')\n",
+      "# os.chdir('/Users/Carlos/Documents/HERMES/reductions/HD1581_6.0/uncombined/')\n",
+      "# os.chdir('/Users/Carlos/Documents/HERMES/reductions/HD285507_6.0/uncombined/')\n",
+      "# os.chdir('/Users/Carlos/Documents/HERMES/reductions/HD285507_6.0/combined/')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
@@ -86,7 +90,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -96,35 +100,37 @@
       "    \n",
       "    red_fluxes =  []\n",
       "    wavelengths = []\n",
-      "    CCCurves = []\n",
-      "    clean_fluxes = []\n",
-      "    clean_wavelengths  = []\n",
-      "    Ps = []\n",
-      "    shfted_wavelengths = []\n",
+      "#     CCCurves = []\n",
+      "#     clean_fluxes = []\n",
+      "#     clean_wavelengths  = []\n",
+      "#     Ps = []\n",
+      "#     shfted_wavelengths = []\n",
       "    sigmas = []\n",
       "    RVs = []\n",
       "    fileNames = []\n",
-      "    safe_flag = []\n",
+      "    Qs = []\n",
+      "#     safe_flag = []\n",
+      "    max_wl_range = []\n",
       "    \n",
       "    def __init__(self):\n",
       "        self.red_fluxes =  []\n",
       "        self.wavelengths = []\n",
-      "        self.CCCurves = []\n",
-      "        self.clean_fluxes = []\n",
-      "        self.clean_wavelengths  = []\n",
-      "        self.Ps = []\n",
-      "        self.shfted_wavelengths = []\n",
+      "#         self.CCCurves = []\n",
+      "#         self.clean_fluxes = []\n",
+      "#         self.clean_wavelengths  = []\n",
+      "#         self.Ps = []\n",
+      "#         self.shfted_wavelengths = []\n",
       "        self.sigmas = []\n",
       "        self.RVs = []\n",
       "        self.fileNames = []\n",
-      "        self.safe_flag = []\n",
-      "        \n",
-      "        "
+      "        self.Qs = []\n",
+      "#         self.safe_flag = []\n",
+      "        self.max_wl_range = []\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -233,737 +239,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 39
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "thisStar = star('Giant02')\n",
-      "thisStar.exposures = exposures()\n",
-      "thisStar.exposures.load_exposures(thisStar.name)\n",
-      "thisStar.exposures.calculate_baryVels(thisStar)\n",
-      "# file_pi = open(i+'.obj', 'w') \n",
-      "# pickle.dump(thisStar, file_pi) \n",
-      "# file_pi.close()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Giant02 star created\n"
-       ]
-      }
-     ],
-     "prompt_number": 50
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "thisCam = thisStar.exposures.cameras[1]"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 55
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "thisCam.red_fluxes"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 56,
-       "text": [
-        "array([[  624.02990723,   655.54571533,   566.63635254, ...,\n",
-        "                   nan,            nan,            nan],\n",
-        "       [ 1229.49621582,  1171.23522949,  1146.23181152, ...,\n",
-        "                   nan,            nan,            nan],\n",
-        "       [  617.56542969,   588.10925293,   570.324646  , ...,\n",
-        "                   nan,            nan,            nan],\n",
-        "       [ 1654.73962402,  1566.22949219,  1537.47729492, ...,\n",
-        "                   nan,            nan,            nan],\n",
-        "       [ 1150.68945312,  1131.14526367,  1134.56091309, ...,\n",
-        "                   nan,            nan,            nan]], dtype=float32)"
-       ]
-      }
-     ],
-     "prompt_number": 56
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "import pylab as plt\n",
-      "for i in range(5):\n",
-      "    plt.plot(thisCam.red_fluxes[i]/np.nanmean(thisCam.red_fluxes[i]), label=i)\n",
-      "plt.legend(loc=0)\n",
-      "plt.show()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 53
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "a =tb.FibreTable('cam1/20aug1_combined.fits')\n",
-      "starNames=a.target[a.type=='P']"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 20
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "len(starNames)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 21,
-       "text": [
-        "74"
-       ]
-      }
-     ],
-     "prompt_number": 21
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "for i in starNames:\n",
-      "    thisStar = star(i)\n",
-      "    thisStar.exposures = exposures()\n",
-      "    thisStar.exposures.load_exposures(thisStar.name)\n",
-      "    thisStar.exposures.calculate_baryVels(thisStar)\n",
-      "    file_pi = open(i+'.obj', 'w') \n",
-      "    pickle.dump(thisStar, file_pi) \n",
-      "    file_pi.close()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Field32 star created\n",
-        "Giant35"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant28"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant12"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant16"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant08"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field05"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field16"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant02"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field34"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field24"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant10"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field28"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant36"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field08"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant13"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field36"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field38"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field39"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field11"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant24"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant03"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant33"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field02"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant18"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant29"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field06"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field15"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant31"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant26"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant38"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field03"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant27"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field23"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field21"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field40"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field25"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant25"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant30"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant37"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant14"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant04"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant05"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field14"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant01"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant34"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field07"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field13"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant17"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field18"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant09"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant06"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field09"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant32"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field17"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field30"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field12"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field27"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant22"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant15"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field04"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant11"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant19"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field19"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field33"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field22"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field37"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant21"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field41"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant23"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field31"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field35"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Field42"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n",
-        "Giant20"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " star created\n"
-       ]
-      }
-     ],
-     "prompt_number": 54
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "prompt_number": 8
     }
    ],
    "metadata": {}
