--- a/tdfdr_prepare_files.ipynb
+++ b/tdfdr_prepare_files.ipynb
@@ -18,7 +18,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -34,7 +34,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -81,52 +81,52 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# #RV run, HD1581 SCIENCE\n",
+      "#RV run, HD1581 SCIENCE\n",
       "\n",
-      "# #target folder\n",
-      "# batch_dir = '/Users/Carlos/Documents/HERMES/reductions/HD1581/'\n",
+      "#target folder\n",
+      "batch_dir = '/Users/Carlos/Documents/HERMES/reductions/HD1581_5.76/'\n",
       "\n",
-      "# #all reduced (*red.fits) files will be copied to this folder\n",
-      "# dr2df.final_dir = '/Users/Carlos/Documents/HERMES/reductions/HD1581/'\n",
-      "\n",
-      "\n",
-      "# #the following arrays have n rows corresponding to n observations (can have more than 1 science file per observation)\n",
-      "# #array of folders with source files\n",
-      "# source_dir_array = ['/Users/Carlos/Documents/HERMES/data/140820/data/',\n",
-      "#                     '/Users/Carlos/Documents/HERMES/data/140821/data/',\n",
-      "#                     '/Users/Carlos/Documents/HERMES/data/140822/data/',\n",
-      "#                     '/Users/Carlos/Documents/HERMES/data/140824/data/',\n",
-      "#                     '/Users/Carlos/Documents/HERMES/data/140825/data/']\n",
-      "\n",
-      "# #file prefixes to build file list for each observation\n",
-      "# date_array = ['20aug',\n",
-      "#               '21aug',\n",
-      "#               '22aug',\n",
-      "#               '24aug',\n",
-      "#               '25aug'] \n",
-      "\n",
-      "# #indices of each file set with original arcs\n",
-      "# ix_array = [[34,52,53],\n",
-      "#             range(41,44)+[46,47],\n",
-      "#             [31,32]+range(36,39),\n",
-      "#             [53,53]+range(58,63),\n",
-      "#             [39,43]+range(44,47)]\n",
+      "#all reduced (*red.fits) files will be copied to this folder\n",
+      "dr2df.final_dir = '/Users/Carlos/Documents/HERMES/reductions/HD1581_5.76/'\n",
       "\n",
       "\n",
-      "# #index of the flats (within file set)\n",
-      "# flat_array=[0, -1, 1, 0, 0]\n",
+      "#the following arrays have n rows corresponding to n observations (can have more than 1 science file per observation)\n",
+      "#array of folders with source files\n",
+      "source_dir_array = ['/Users/Carlos/Documents/HERMES/data/140820/data/',\n",
+      "                    '/Users/Carlos/Documents/HERMES/data/140821/data/',\n",
+      "                    '/Users/Carlos/Documents/HERMES/data/140822/data/',\n",
+      "                    '/Users/Carlos/Documents/HERMES/data/140824/data/',\n",
+      "                    '/Users/Carlos/Documents/HERMES/data/140825/data/']\n",
       "\n",
-      "# #index of the arcs (within file set)\n",
-      "# arc_array=[1, -2, 0, 1, 1]\n",
+      "#file prefixes to build file list for each observation\n",
+      "date_array = ['20aug',\n",
+      "              '21aug',\n",
+      "              '22aug',\n",
+      "              '24aug',\n",
+      "              '25aug'] \n",
+      "\n",
+      "#indices of each file set with original arcs\n",
+      "ix_array = [[34,52,53],\n",
+      "            range(41,44)+[46,47],\n",
+      "            [31,32]+range(36,39),\n",
+      "            [53,53]+range(58,63),\n",
+      "            [39,43]+range(44,47)]\n",
+      "\n",
+      "\n",
+      "#index of the flats (within file set)\n",
+      "flat_array=[0, -1, 1, 0, 0]\n",
+      "\n",
+      "#index of the arcs (within file set)\n",
+      "arc_array=[1, -2, 0, 1, 1]\n",
       " \n",
       "\n",
-      "# #corresponing bias (looks for BIASCombined.fits in the folders bias/<this index>_*/<camera#>/\n",
-      "# bias_array=[0,1,2,3,4]"
+      "#corresponing bias (looks for BIASCombined.fits in the folders bias/<this index>_*/<camera#>/\n",
+      "bias_array=[0,1,2,3,4]"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -182,154 +182,110 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# #RV run, HD285507 SCIENCE-single arc\n",
-      "\n",
-      "# #target folder\n",
-      "# batch_dir = '/Users/Carlos/Documents/HERMES/reductions/HD285507_single_arc_5.76/'\n",
-      "\n",
-      "# #all reduced (*red.fits) files will be copied to this folder\n",
-      "# dr2df.final_dir = '/Users/Carlos/Documents/HERMES/reductions/HD285507_single_arc_5.76/'\n",
-      "\n",
-      "\n",
-      "# #the following arrays have n rows corresponding to n observations (can have more than 1 science file per observation)\n",
-      "# #array of folders with source files\n",
-      "# source_dir_array = ['/Users/Carlos/Documents/HERMES/data/140820/data/',\n",
-      "#                     '/Users/Carlos/Documents/HERMES/data/140821/data/',\n",
-      "#                     '/Users/Carlos/Documents/HERMES/data/140822/data/',\n",
-      "#                     '/Users/Carlos/Documents/HERMES/data/140824/data/',\n",
-      "#                     '/Users/Carlos/Documents/HERMES/data/140825/data/']\n",
-      "\n",
-      "# #file prefixes to build file list for each observation\n",
-      "# date_array = ['20aug',\n",
-      "#               '21aug',\n",
-      "#               '22aug',\n",
-      "#               '24aug',\n",
-      "#               '25aug'] \n",
-      "\n",
-      "# #indices of each file set with original arcs\n",
-      "# ix_array = [[37,38]+range(39,42),\n",
-      "#             [36,37]+range(38,41),\n",
-      "#             [40,39]+range(41,44),\n",
-      "#             [66,67]+range(63,66),\n",
-      "#             [47,48]+range(49,52)]\n",
-      "\n",
-      "\n",
-      "# #index of the flats (within file set)\n",
-      "# flat_array=[0,0,0,0,0]\n",
-      "\n",
-      "# #index of the arcs (within file set)\n",
-      "# arc_array=[1,1,1,1,1]\n",
-      " \n",
-      "# #corresponing bias (looks for BIASCombined.fits in the folders bias/<this index>_*/<camera#>/\n",
-      "# bias_array=[0,1,2,3,4]"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 8
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# #RV run, HD285507 SCIENCE\n",
-      "\n",
-      "# #target folder\n",
-      "# batch_dir = '/Users/Carlos/Documents/HERMES/reductions/HD285507/'\n",
-      "\n",
-      "# #all reduced (*red.fits) files will be copied to this folder\n",
-      "# dr2df.final_dir = '/Users/Carlos/Documents/HERMES/reductions/HD285507/'\n",
-      "\n",
-      "\n",
-      "# #the following arrays have n rows corresponding to n observations (can have more than 1 science file per observation)\n",
-      "# #array of folders with source files\n",
-      "# source_dir_array = ['/Users/Carlos/Documents/HERMES/data/140820/data/',\n",
-      "#                     '/Users/Carlos/Documents/HERMES/data/140821/data/',\n",
-      "#                     '/Users/Carlos/Documents/HERMES/data/140822/data/']\n",
-      "\n",
-      "# #file prefixes to build file list for each observation\n",
-      "# date_array = ['20aug',\n",
-      "#               '21aug',\n",
-      "#               '22aug'] \n",
-      "\n",
-      "# #indices of each file set with original arcs\n",
-      "# ix_array = [range(37,42),\n",
-      "#             range(36,41),\n",
-      "#             range(39,44)]\n",
-      "\n",
-      "\n",
-      "# #index of the arcs (within file set)\n",
-      "# arc_array=[1,1,0]\n",
-      " \n",
-      "# #index of the flats (within file set)\n",
-      "# flat_array=[0,0,1]\n",
-      "\n",
-      "# #corresponing bias (looks for BIASCombined.fits in the folders bias/<this index>_*/<camera#>/\n",
-      "# bias_array=[0,1,2]"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 7
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "#RV run, rhoTuc (long series) SCIENCE\n",
+      "#RV run, HD285507\n",
       "\n",
       "#target folder\n",
-      "batch_dir = '/Users/Carlos/Documents/HERMES/reductions/rhoTuc_5.76/'\n",
+      "batch_dir = '/Users/Carlos/Documents/HERMES/reductions/HD285507_6.0/'\n",
       "\n",
       "#all reduced (*red.fits) files will be copied to this folder\n",
-      "dr2df.final_dir = '/Users/Carlos/Documents/HERMES/reductions/rhoTuc_5.76/'\n",
+      "dr2df.final_dir = '/Users/Carlos/Documents/HERMES/reductions/HD285507_6.0/'\n",
       "\n",
       "\n",
       "#the following arrays have n rows corresponding to n observations (can have more than 1 science file per observation)\n",
       "#array of folders with source files\n",
       "source_dir_array = ['/Users/Carlos/Documents/HERMES/data/140820/data/',\n",
       "                    '/Users/Carlos/Documents/HERMES/data/140821/data/',\n",
-      "                    '/Users/Carlos/Documents/HERMES/data/140821/data/',\n",
-      "                    '/Users/Carlos/Documents/HERMES/data/140822/data/',\n",
       "                    '/Users/Carlos/Documents/HERMES/data/140822/data/',\n",
       "                    '/Users/Carlos/Documents/HERMES/data/140824/data/',\n",
-      "                    '/Users/Carlos/Documents/HERMES/data/140825/data/',\n",
       "                    '/Users/Carlos/Documents/HERMES/data/140825/data/']\n",
       "\n",
       "#file prefixes to build file list for each observation\n",
       "date_array = ['20aug',\n",
       "              '21aug',\n",
-      "              '21aug', \n",
-      "              '22aug',\n",
       "              '22aug',\n",
       "              '24aug',\n",
-      "              '25aug',\n",
       "              '25aug'] \n",
       "\n",
       "#indices of each file set with original arcs\n",
-      "ix_array = [range(42,52),\n",
-      "            range(31,36),\n",
-      "            [44,46,47],\n",
-      "            range(31,36),\n",
-      "            range(44,48),\n",
-      "            range(53,58),\n",
-      "            range(39,44),\n",
-      "            range(52,55)]\n",
+      "ix_array = [[37,38]+range(39,42),\n",
+      "            [36,37]+range(38,41),\n",
+      "            [40,39]+range(41,44),\n",
+      "            [66,67]+range(63,66),\n",
+      "            [47,48]+range(49,52)]\n",
       "\n",
+      "\n",
+      "#index of the flats (within file set)\n",
+      "flat_array=[0,0,0,0,0]\n",
       "\n",
       "#index of the arcs (within file set)\n",
-      "arc_array=[1,1,1,0,1,1,-1, 1]\n",
+      "arc_array=[1,1,1,1,1]\n",
       " \n",
-      "#index of the flats (within file set)\n",
-      "flat_array=[0,0,2,1,0,0,0,0]\n",
-      "\n",
       "#corresponing bias (looks for BIASCombined.fits in the folders bias/<this index>_*/<camera#>/\n",
-      "bias_array=[0,1,1,2,2,3,4,4]"
+      "bias_array=[0,1,2,3,4]"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# #RV run, rhoTuc (long series) SCIENCE\n",
+      "\n",
+      "# #target folder\n",
+      "# batch_dir = '/Users/Carlos/Documents/HERMES/reductions/rhoTuc_single_arc_5.76/'\n",
+      "\n",
+      "# #all reduced (*red.fits) files will be copied to this folder\n",
+      "# dr2df.final_dir = '/Users/Carlos/Documents/HERMES/reductions/rhoTuc_single_arc_5.76/'\n",
+      "\n",
+      "\n",
+      "# #the following arrays have n rows corresponding to n observations (can have more than 1 science file per observation)\n",
+      "# #array of folders with source files\n",
+      "# source_dir_array = ['/Users/Carlos/Documents/HERMES/data/140820/data/',\n",
+      "#                     '/Users/Carlos/Documents/HERMES/data/140821/data/',\n",
+      "#                     '/Users/Carlos/Documents/HERMES/data/140821/data/',\n",
+      "#                     '/Users/Carlos/Documents/HERMES/data/140822/data/',\n",
+      "#                     '/Users/Carlos/Documents/HERMES/data/140822/data/',\n",
+      "#                     '/Users/Carlos/Documents/HERMES/data/140824/data/',\n",
+      "#                     '/Users/Carlos/Documents/HERMES/data/140825/data/',\n",
+      "#                     '/Users/Carlos/Documents/HERMES/data/140825/data/']\n",
+      "\n",
+      "# #file prefixes to build file list for each observation\n",
+      "# date_array = ['20aug',\n",
+      "#               '21aug',\n",
+      "#               '21aug', \n",
+      "#               '22aug',\n",
+      "#               '22aug',\n",
+      "#               '24aug',\n",
+      "#               '25aug',\n",
+      "#               '25aug'] \n",
+      "\n",
+      "# #indices of each file set with original arcs\n",
+      "# ix_array = [range(42,52),\n",
+      "#             range(31,36),\n",
+      "#             [44,46,47],\n",
+      "#             range(31,36),\n",
+      "#             range(44,48),\n",
+      "#             range(53,58),\n",
+      "#             range(39,44),\n",
+      "#             range(52,55)]\n",
+      "\n",
+      "\n",
+      "# #index of the arcs (within file set)\n",
+      "# arc_array=[1,1,1,0,1,1,-1, 1]\n",
+      " \n",
+      "# #index of the flats (within file set)\n",
+      "# flat_array=[0,0,2,1,0,0,0,0]\n",
+      "\n",
+      "# #corresponing bias (looks for BIASCombined.fits in the folders bias/<this index>_*/<camera#>/\n",
+      "# bias_array=[0,1,1,2,2,3,4,4]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -771,6 +727,26 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# glob.glob(batch_dir + 'bias/'+str(bias_array[i])+'_*')[0] + '/'\n",
+      "print batch_dir + 'bias/'+str(bias_array[i])+'_*'"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "/Users/Carlos/Documents/HERMES/reductions/HD1581_5.76/bias/0_*\n"
+       ]
+      }
+     ],
+     "prompt_number": 26
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "#SCIENCE\n",
       "#travels the arrays specified above running a full 2dfdr reduction in each loop\n",
       "\n",
@@ -795,7 +771,7 @@
        "stream": "stdout",
        "text": [
         "20aug\n",
-        "/Users/Carlos/Documents/HERMES/reductions/rhoTuc_5.76/bias/0_20aug/\n",
+        "/Users/Carlos/Documents/HERMES/reductions/HD285507_6.0/bias/0_20aug/\n",
         "21aug"
        ]
       },
@@ -804,16 +780,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "/Users/Carlos/Documents/HERMES/reductions/rhoTuc_5.76/bias/1_21aug/\n",
-        "21aug"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "/Users/Carlos/Documents/HERMES/reductions/rhoTuc_5.76/bias/1_21aug/\n",
+        "/Users/Carlos/Documents/HERMES/reductions/HD285507_6.0/bias/1_21aug/\n",
         "22aug"
        ]
       },
@@ -822,8 +789,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "/Users/Carlos/Documents/HERMES/reductions/rhoTuc_5.76/bias/2_22aug/\n",
-        "22aug"
+        "/Users/Carlos/Documents/HERMES/reductions/HD285507_6.0/bias/2_22aug/"
        ]
       },
       {
@@ -831,7 +797,6 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "/Users/Carlos/Documents/HERMES/reductions/rhoTuc_5.76/bias/2_22aug/\n",
         "24aug"
        ]
       },
@@ -840,14 +805,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "/Users/Carlos/Documents/HERMES/reductions/rhoTuc_5.76/bias/3_24aug/"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
+        "/Users/Carlos/Documents/HERMES/reductions/HD285507_6.0/bias/3_24aug/\n",
         "25aug"
        ]
       },
@@ -856,23 +814,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "/Users/Carlos/Documents/HERMES/reductions/rhoTuc_5.76/bias/4_25aug/"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "25aug"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "/Users/Carlos/Documents/HERMES/reductions/rhoTuc_5.76/bias/4_25aug/"
+        "/Users/Carlos/Documents/HERMES/reductions/HD285507_6.0/bias/4_25aug/"
        ]
       },
       {
@@ -883,7 +825,7 @@
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
